--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>todo</title>
-<style>
-</style>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <link rel="stylesheet" href="./styles.css"/>
+
+  <title>todo-reactJS</title>
 </head>
 <body>
-<div id="root"></div>
-<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-<script src="script.js" type="text/babel"></script>
+    <div id="root"></div>
+
+    <script src="./script.jsx" type="text/babel"></script>
 </body>
 </html>
