--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>todo-reactJS</title>
 </head>
 <body>
+    <h1>hello reactJs to-do list!</h1>
     <div id="root"></div>
 
     <script src="./script.jsx" type="text/babel"></script>
